--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: var(--color-slate-300, #D5E1EF);
+    background: var(--color-slate-300, #FFFFFF);
     font-family: "Outfit", serif;
     text-align: center;
     display:flex;
@@ -52,7 +52,7 @@ body{
     width: 320px;
     background-color: white;
    border-radius: 20px;
-box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.05);
+box-shadow: 0px 38.26px 38.26px 0px rgba(177, 187, 211, 0.34);
 overflow: hidden;
 padding: var(--spacing-200, 16px) var(--spacing-200, 16px) var(--spacing-500, 40px) var(--spacing-200, 16px);
 display: flex;
